updated as per review comments

--- a/db.properties
+++ b/db.properties
@@ -1,1 +1,10 @@
-browser = chrome
+browser = cloud-chrome
+firstName = Automation
+lastName = Test
+address = Hyderabad
+city = Hyderabad
+state = Telangana
+zip = 500072
+phone = 9885952948
+ssn = 123456789
+password = selenium
